--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 
 .Main{
-	background-color: #373849;
+	background-color: #353849;
 	margin: 3% 10%;
 	color: #eee;
 	text-align:center;
@@ -28,7 +28,7 @@
 #submit{margin-left:100px;width:100px;}
 #reset{width:100px;}
 .design{
-	background-color:#787878;
+	background-color:#787778;
 	color:white;
 }
 @media(max-width: 1200px){
@@ -49,6 +49,9 @@
 	width:150px;
 	float: left;	
 }
+	ip{
+		color:#Ab5678;
+		font-size:40px;
 }
 </style>
 </head>
