--- a/Project/failed.html
+++ b/Project/failed.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login@bansal</title>
+	<title>Login@garg</title>
 	<style>
 	.Form{
-		background-color: #834788;
+		background-color: #836788;
 		margin: 10%;
 		padding: 4%;
 	}
