--- a/Project/login.html
+++ b/Project/login.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login@bansal</title>
+	<title>Login@Garg</title>
 	<style>
 	.Form{
-		background-color: #834788;
+		background-color: #837788;
 		margin: 10%;
 		padding: 4%;
 	}
@@ -14,7 +14,7 @@
 	}
 	@media(min-width: 400px){
 		.Body{
-			font-size: 10px;
+			font-size: 12px;
 		}
 	}
 
