--- a/Project/index.html
+++ b/Project/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Bansal</title>
+<title>Garg</title>
 <style type="text/css">
 
 .Main{
 	background-color: #373849;
-	margin: 3% 10%;
+	margin: 4% 10%;
 	color: #eee;
 	text-align:center;
 	border: 0px solid #333;
@@ -18,7 +18,7 @@
 	border:1px solid #456;
 	border-radius:10px;
 	padding:10px;
-	margin: 3%;
+	margin: 4%;
 	color: #222;
 }
 .inputform table tr td input,textarea,select{
